tests/verilog_eval/vltor_build/Prob099_m2014_q6c/err.txt
%Warning-PINMISSING: /Users/shuqingzhao/github/verilog-eval/dataset_spec-to-rtl/Prob099_m2014_q6c_test.sv:71:12: Cell has missing pin: 'Y1'
   71 |  RefModule good1 (
      |            ^~~~~
                     /Users/shuqingzhao/github/verilog-eval/dataset_spec-to-rtl/Prob099_m2014_q6c_ref.sv:5:16: ... Location of port declaration
    5 |   output       Y1,
      |                ^~
                     ... For warning description see https://verilator.org/warn/PINMISSING?v=5.034
                     ... Use "/* verilator lint_off PINMISSING */" and lint_on around source to disable this message.
%Warning-PINMISSING: /Users/shuqingzhao/github/verilog-eval/dataset_spec-to-rtl/Prob099_m2014_q6c_test.sv:71:12: Cell has missing pin: 'Y3'
   71 |  RefModule good1 (
      |            ^~~~~
                     /Users/shuqingzhao/github/verilog-eval/dataset_spec-to-rtl/Prob099_m2014_q6c_ref.sv:6:16: ... Location of port declaration
    6 |   output       Y3
      |                ^~
%Warning-TIMESCALEMOD: /Users/shuqingzhao/github/verilog-eval/dataset_spec-to-rtl/Prob099_m2014_q6c_ref.sv:2:8: Timescale missing on this module as other modules have it (IEEE 1800-2023 3.14.2.3)
    2 | module RefModule (
      |        ^~~~~~~~~
                       /Users/shuqingzhao/github/verilog-eval/dataset_spec-to-rtl/Prob099_m2014_q6c_test.sv:7:8: ... Location of module with timescale
    7 | module stimulus_gen (
      |        ^~~~~~~~~~~~
%Warning-TIMESCALEMOD: TopModule.sv:1:8: Timescale missing on this module as other modules have it (IEEE 1800-2023 3.14.2.3)
    1 | module TopModule (
      |        ^~~~~~~~~
                       /Users/shuqingzhao/github/verilog-eval/dataset_spec-to-rtl/Prob099_m2014_q6c_test.sv:7:8: ... Location of module with timescale
    7 | module stimulus_gen (
      |        ^~~~~~~~~~~~
%Error-PINNOTFOUND: /Users/shuqingzhao/github/verilog-eval/dataset_spec-to-rtl/Prob099_m2014_q6c_test.sv:74:4: Pin not found: 'Y2'
                                                                                                             : ... Suggested alternative: 'Y1'
   74 |   .Y2(Y2_ref),
      |    ^~
%Error-PINNOTFOUND: /Users/shuqingzhao/github/verilog-eval/dataset_spec-to-rtl/Prob099_m2014_q6c_test.sv:75:4: Pin not found: 'Y4'
                                                                                                             : ... Suggested alternative: 'Y1'
   75 |   .Y4(Y4_ref) );
      |    ^~
%Error: Exiting due to 2 error(s)
